Fix long info lines on mobile

--- a/assets/scss/components/info.scss
+++ b/assets/scss/components/info.scss
@@ -9,4 +9,8 @@ section.info {
         text-align: left;
         padding-right: 15px;
     }
+
+    td {
+        word-break: break-word;
+    }
 }
